src/gtkscintilla.h

typedef struct _GtkScintilla			GtkScintilla;
struct _GtkScintilla
{
	ScintillaObject parent;
	GtkWidget *scintilla;
	GtkAccelGroup *accel_group;
    /*< private >*/
	GtkScintillaPrivate *priv;
};
void 		gtk_scintilla_insert_text (GtkScintilla *sci, gint pos, const gchar *text);
void 		gtk_scintilla_redo (GtkScintilla *sci);
void 		gtk_scintilla_select_all (GtkScintilla *sci);
gint 		gtk_scintilla_marker_line_from_handle (GtkScintilla *sci, gint handle);
void 		gtk_scintilla_marker_delete_handle (GtkScintilla *sci, gint handle);
gint 		gtk_scintilla_get_view_white_space (GtkScintilla *sci);
gint 		gtk_scintilla_position_from_point (GtkScintilla *sci, gint x, gint y);
gint 		gtk_scintilla_position_from_point_close (GtkScintilla *sci, gint x, gint y);
void 		gtk_scintilla_goto_line (GtkScintilla *sci, gint line);
void 		gtk_scintilla_goto_pos (GtkScintilla *sci, gint pos);
void 		gtk_scintilla_marker_define (GtkScintilla *sci, gint markerNumber, gint markerSymbol);
void 		gtk_scintilla_marker_set_fore (GtkScintilla *sci, gint markerNumber, gint fore);
void 		gtk_scintilla_marker_set_back (GtkScintilla *sci, gint markerNumber, gint back);
gint 		gtk_scintilla_marker_add (GtkScintilla *sci, gint line, gint markerNumber);
void 		gtk_scintilla_marker_delete (GtkScintilla *sci, gint line, gint markerNumber);
void 		gtk_scintilla_marker_delete_all (GtkScintilla *sci, gint markerNumber);
gint 		gtk_scintilla_marker_get (GtkScintilla *sci, gint line);
gint 		gtk_scintilla_marker_next (GtkScintilla *sci, gint lineStart, gint markerMask);
gint 		gtk_scintilla_marker_previous (GtkScintilla *sci, gint lineStart, gint markerMask);
void 		gtk_scintilla_marker_define_pixmap (GtkScintilla *sci, gint markerNumber, const gchar *pixmap);
void 		gtk_scintilla_marker_add_set (GtkScintilla *sci, gint line, gint set);
void 		gtk_scintilla_marker_set_alpha (GtkScintilla *sci, gint markerNumber, gint alpha);
void 		gtk_scintilla_indic_set_style (GtkScintilla *sci, gint indic, gint style);
gint 		gtk_scintilla_indic_get_style (GtkScintilla *sci, gint indic);
void 		gtk_scintilla_indic_set_fore (GtkScintilla *sci, gint indic, gint fore);
gint 		gtk_scintilla_indic_get_fore (GtkScintilla *sci, gint indic);
void 		gtk_scintilla_indic_set_under (GtkScintilla *sci, gint indic, gboolean under);
gboolean 	gtk_scintilla_indic_get_under (GtkScintilla *sci, gint indic);
gint 		gtk_scintilla_get_whitespace_size (GtkScintilla *sci);
void		gtk_scintilla_register_image (GtkScintilla *sci, gint type, const gchar *xpmData);
gboolean 	gtk_scintilla_get_use_tabs (GtkScintilla *sci);
gboolean 	gtk_scintilla_get_use_palette (GtkScintilla *sci);
void		gtk_scintilla_hide_selection (GtkScintilla *sci, gboolean normal);
gint 		gtk_scintilla_point_x_from_position (GtkScintilla *sci, gint pos);
gint 		gtk_scintilla_point_y_from_position (GtkScintilla *sci, gint pos);
gint 		gtk_scintilla_line_from_position (GtkScintilla *sci, gint pos);
gint 		gtk_scintilla_position_from_line (GtkScintilla *sci, gint line);
void		gtk_scintilla_line_scroll (GtkScintilla *sci, gint columns, gint lines);
void		gtk_scintilla_scroll_caret (GtkScintilla *sci);
void		gtk_scintilla_null (GtkScintilla *sci);
void		gtk_scintilla_paste (GtkScintilla *sci);
gint		gtk_scintilla_replace_target (GtkScintilla *sci, const gchar *text, gint length);
gint		gtk_scintilla_replace_target_regex (GtkScintilla *sci, const gchar *text, gint length);
gint		gtk_scintilla_search_in_target (GtkScintilla *sci, const gchar *text);
void		gtk_scintilla_hide_lines (GtkScintilla *sci, gint lineStart, gint lineEnd);
gint		gtk_scintilla_get_wrap_mode (GtkScintilla *sci);
gint		gtk_scintilla_get_wrap_visual_flags (GtkScintilla *sci);
gint		gtk_scintilla_get_wrap_visual_flags_location (GtkScintilla *sci);
gint		gtk_scintilla_get_wrap_start_indent (GtkScintilla *sci);
gint		gtk_scintilla_get_wrap_indent_mode (GtkScintilla *sci);
gboolean	gtk_scintilla_get_vscrollbar (GtkScintilla *sci);
void		gtk_scintilla_lines_join (GtkScintilla *sci);
void		gtk_scintilla_lines_split (GtkScintilla *sci, gint pixelWidth);
void		gtk_scintilla_line_down (GtkScintilla *sci);
void		gtk_scintilla_line_down_extend (GtkScintilla *sci);
void		gtk_scintilla_line_up (GtkScintilla *sci);
void		gtk_scintilla_line_up_extend (GtkScintilla *sci);
void		gtk_scintilla_home (GtkScintilla *sci);
void		gtk_scintilla_home_extend (GtkScintilla *sci);
void		gtk_scintilla_line_end (GtkScintilla *sci);
void		gtk_scintilla_line_end_extend (GtkScintilla *sci);
void		gtk_scintilla_page_up (GtkScintilla *sci);
void		gtk_scintilla_page_up_extend (GtkScintilla *sci);
void		gtk_scintilla_page_down (GtkScintilla *sci);
void		gtk_scintilla_page_down_extend (GtkScintilla *sci);
void		gtk_scintilla_new_line (GtkScintilla *sci);
void		gtk_scintilla_line_cut (GtkScintilla *sci);
void		gtk_scintilla_line_delete (GtkScintilla *sci);
void		gtk_scintilla_line_transpose (GtkScintilla *sci);
void		gtk_scintilla_line_duplicate (GtkScintilla *sci);
void		gtk_scintilla_lower_case (GtkScintilla *sci);
void		gtk_scintilla_line_scroll_down (GtkScintilla *sci);
void		gtk_scintilla_line_scroll_up (GtkScintilla *sci);
void		gtk_scintilla_home_display (GtkScintilla *sci);
void		gtk_scintilla_home_display_extend (GtkScintilla *sci);
void		gtk_scintilla_line_end_display (GtkScintilla *sci);
void		gtk_scintilla_line_end_display_extend (GtkScintilla *sci);
void		gtk_scintilla_home_wrap (GtkScintilla *sci);
void		gtk_scintilla_home_wrap_extend (GtkScintilla *sci);
void		gtk_scintilla_line_end_wrap (GtkScintilla *sci);
void		gtk_scintilla_line_end_wrap_extend (GtkScintilla *sci);
void		gtk_scintilla_line_copy (GtkScintilla *sci);
void		gtk_scintilla_move_caret_inside_view (GtkScintilla *sci);
gint		gtk_scintilla_line_length (GtkScintilla *sci, gint line);
gboolean 	gtk_scintilla_get_view_eol (GtkScintilla *sci);
void		gtk_scintilla_search_anchor (GtkScintilla *sci);
gint		gtk_scintilla_search_next (GtkScintilla *sci, const gchar *text, gint flags);
gint		gtk_scintilla_lines_on_screen (GtkScintilla *sci);
gint		gtk_scintilla_get_zoom (GtkScintilla *sci);
void		gtk_scintilla_release_document (GtkScintilla *sci, gint doc);
gint		gtk_scintilla_get_x_offset (GtkScintilla *sci);
void		gtk_scintilla_grab_focus (GtkScintilla *sci);
void		gtk_scintilla_para_down (GtkScintilla *sci);
void		gtk_scintilla_para_down_extend (GtkScintilla *sci);
void		gtk_scintilla_para_up (GtkScintilla *sci);
void		gtk_scintilla_para_up_extend (GtkScintilla *sci);
gint		gtk_scintilla_position_before (GtkScintilla *sci, gint pos);
gint		gtk_scintilla_position_after (GtkScintilla *sci, gint pos);
void		gtk_scintilla_line_down_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_line_up_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_home_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_line_end_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_page_up_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_page_down_rect_extend (GtkScintilla *sci);
void		gtk_scintilla_indicator_fill_range (GtkScintilla *sci, gint position, gint fillLength);
void		gtk_scintilla_indicator_clear_range (GtkScintilla *sci, gint position, gint clearLength);
gint		gtk_scintilla_indicator_all_on_for (GtkScintilla *sci, gint position);
gint		gtk_scintilla_indicator_value_at (GtkScintilla *sci, gint indicator, gint position);
gint		gtk_scintilla_indicator_start (GtkScintilla *sci, gint indicator, gint position);
gint		gtk_scintilla_indicator_end (GtkScintilla *sci, gint indicator, gint position);
void		gtk_scintilla_indic_set_alpha (GtkScintilla *sci, gint indicator, gint alpha);
gint		gtk_scintilla_indic_get_alpha (GtkScintilla *sci, gint indicator);
gint		gtk_scintilla_marker_symbol_defined (GtkScintilla *sci, gint markerNumber);
void		gtk_scintilla_margin_set_text (GtkScintilla *sci, gint line, const gchar *text);
gint		gtk_scintilla_margin_get_text (GtkScintilla *sci, gint line, gchar *text);
void		gtk_scintilla_margin_set_style (GtkScintilla *sci, gint line, gint style);
gint		gtk_scintilla_margin_get_style (GtkScintilla *sci, gint line);
void		gtk_scintilla_margin_set_styles (GtkScintilla *sci, gint line, const gchar *styles);
gint		gtk_scintilla_margin_get_styles (GtkScintilla *sci, gint line, gchar *styles);
void		gtk_scintilla_margin_text_clear_all (GtkScintilla *sci);
void		gtk_scintilla_margin_set_style_offset (GtkScintilla *sci, gint style);
gint		gtk_scintilla_margin_get_style_offset (GtkScintilla *sci);
gint		gtk_scintilla_get_virtual_space_options (GtkScintilla *sci);
void		gtk_scintilla_rotate_selection (GtkScintilla *sci);
void		gtk_scintilla_load_lexer_library (GtkScintilla *sci, const gchar *path);