bindings/vala/gtkscintilla-1.0.vapi

		[CCode (cname = "gtk_scintilla_get_use_palette")]
		public bool get_use_palette ();
		[CCode (cname = "gtk_scintilla_get_use_tabs")]
		public bool get_use_tabs ();
		[CCode (cname = "gtk_scintilla_get_view_eol")]
		public bool get_view_eol ();
		[CCode (cname = "gtk_scintilla_get_view_white_space")]
		public int get_view_white_space ();
		[CCode (cname = "gtk_scintilla_get_virtual_space_options")]
		public int get_virtual_space_options ();
		[CCode (cname = "gtk_scintilla_get_vscrollbar")]
		public bool get_vscrollbar ();
		[CCode (cname = "gtk_scintilla_get_whitespace_size")]
		public int get_whitespace_size ();
		[CCode (cname = "gtk_scintilla_get_wrap_indent_mode")]
		public int get_wrap_indent_mode ();
		[CCode (cname = "gtk_scintilla_get_wrap_mode")]
		public int get_wrap_mode ();
		[CCode (cname = "gtk_scintilla_get_wrap_start_indent")]
		public int get_wrap_start_indent ();
		[CCode (cname = "gtk_scintilla_get_wrap_visual_flags")]
		public int get_wrap_visual_flags ();
		[CCode (cname = "gtk_scintilla_get_wrap_visual_flags_location")]
		public int get_wrap_visual_flags_location ();
		[CCode (cname = "gtk_scintilla_get_x_offset")]
		public int get_x_offset ();
		[CCode (cname = "gtk_scintilla_get_zoom")]
		public int get_zoom ();
		[CCode (cname = "gtk_scintilla_goto_line")]
		public void goto_line (int line);
		[CCode (cname = "gtk_scintilla_goto_pos")]
		public void goto_pos (int pos);
		[CCode (cname = "gtk_scintilla_grab_focus")]
		public void grab_focus ();
		[CCode (cname = "gtk_scintilla_hide_lines")]
		public void hide_lines (int lineStart, int lineEnd);
		[CCode (cname = "gtk_scintilla_hide_selection")]
		public void hide_selection (bool normal);
		[CCode (cname = "gtk_scintilla_home")]
		public void home ();
		[CCode (cname = "gtk_scintilla_home_display")]
		public void home_display ();
		[CCode (cname = "gtk_scintilla_home_display_extend")]
		public void home_display_extend ();
		[CCode (cname = "gtk_scintilla_home_extend")]
		public void home_extend ();
		[CCode (cname = "gtk_scintilla_home_rect_extend")]
		public void home_rect_extend ();
		[CCode (cname = "gtk_scintilla_home_wrap")]
		public void home_wrap ();
		[CCode (cname = "gtk_scintilla_home_wrap_extend")]
		public void home_wrap_extend ();
		[CCode (cname = "gtk_scintilla_indic_get_alpha")]
		public int indic_get_alpha (int indicator);
		[CCode (cname = "gtk_scintilla_indic_get_fore")]
		public int indic_get_fore (int indic);
		[CCode (cname = "gtk_scintilla_indic_get_style")]
		public int indic_get_style (int indic);
		[CCode (cname = "gtk_scintilla_indic_get_under")]
		public bool indic_get_under (int indic);
		[CCode (cname = "gtk_scintilla_indic_set_alpha")]
		public void indic_set_alpha (int indicator, int alpha);
		[CCode (cname = "gtk_scintilla_indic_set_fore")]
		public void indic_set_fore (int indic, int fore);
		[CCode (cname = "gtk_scintilla_indic_set_style")]
		public void indic_set_style (int indic, int style);
		[CCode (cname = "gtk_scintilla_indic_set_under")]
		public void indic_set_under (int indic, bool under);
		[CCode (cname = "gtk_scintilla_indicator_all_on_for")]
		public int indicator_all_on_for (int position);
		[CCode (cname = "gtk_scintilla_indicator_clear_range")]
		public void indicator_clear_range (int position, int clearLength);
		[CCode (cname = "gtk_scintilla_indicator_end")]
		public int indicator_end (int indicator, int position);
		[CCode (cname = "gtk_scintilla_indicator_fill_range")]
		public void indicator_fill_range (int position, int fillLength);
		[CCode (cname = "gtk_scintilla_indicator_start")]
		public int indicator_start (int indicator, int position);
		[CCode (cname = "gtk_scintilla_indicator_value_at")]
		public int indicator_value_at (int indicator, int position);
		[CCode (cname = "gtk_scintilla_insert_text")]
		public void insert_text (int pos, string text);
		[CCode (cname = "gtk_scintilla_new_line", type = "void", has_construct_function = false)]
		public .line (GtkScintilla. sci);
		[CCode (cname = "gtk_scintilla_line_copy")]
		public void line_copy ();
		[CCode (cname = "gtk_scintilla_line_cut")]
		public void line_cut ();
		[CCode (cname = "gtk_scintilla_line_delete")]
		public void line_delete ();
		[CCode (cname = "gtk_scintilla_line_down")]
		public void line_down ();
		[CCode (cname = "gtk_scintilla_line_down_extend")]
		public void line_down_extend ();
		[CCode (cname = "gtk_scintilla_line_down_rect_extend")]
		public void line_down_rect_extend ();
		[CCode (cname = "gtk_scintilla_line_duplicate")]
		public void line_duplicate ();
		[CCode (cname = "gtk_scintilla_line_end")]
		public void line_end ();
		[CCode (cname = "gtk_scintilla_line_end_display")]
		public void line_end_display ();
		[CCode (cname = "gtk_scintilla_line_end_display_extend")]
		public void line_end_display_extend ();
		[CCode (cname = "gtk_scintilla_line_end_extend")]
		public void line_end_extend ();
		[CCode (cname = "gtk_scintilla_line_end_rect_extend")]
		public void line_end_rect_extend ();
		[CCode (cname = "gtk_scintilla_line_end_wrap")]
		public void line_end_wrap ();
		[CCode (cname = "gtk_scintilla_line_end_wrap_extend")]
		public void line_end_wrap_extend ();
		[CCode (cname = "gtk_scintilla_line_from_position")]
		public int line_from_position (int pos);
		[CCode (cname = "gtk_scintilla_line_length")]
		public int line_length (int line);
		[CCode (cname = "gtk_scintilla_line_scroll")]
		public void line_scroll (int columns, int lines);
		[CCode (cname = "gtk_scintilla_line_scroll_down")]
		public void line_scroll_down ();
		[CCode (cname = "gtk_scintilla_line_scroll_up")]
		public void line_scroll_up ();
		[CCode (cname = "gtk_scintilla_line_transpose")]
		public void line_transpose ();
		[CCode (cname = "gtk_scintilla_line_up")]
		public void line_up ();
		[CCode (cname = "gtk_scintilla_line_up_extend")]
		public void line_up_extend ();
		[CCode (cname = "gtk_scintilla_line_up_rect_extend")]
		public void line_up_rect_extend ();
		[CCode (cname = "gtk_scintilla_lines_join")]
		public void lines_join ();
		[CCode (cname = "gtk_scintilla_lines_on_screen")]
		public int lines_on_screen ();
		[CCode (cname = "gtk_scintilla_lines_split")]
		public void lines_split (int pixelWidth);
		[CCode (cname = "gtk_scintilla_load_lexer_library")]
		public void load_lexer_library (string path);
		[CCode (cname = "gtk_scintilla_lower_case")]
		public void lower_case ();
		[CCode (cname = "gtk_scintilla_margin_get_style")]
		public int margin_get_style (int line);
		[CCode (cname = "gtk_scintilla_margin_get_style_offset")]
		public int margin_get_style_offset ();
		[CCode (cname = "gtk_scintilla_margin_get_styles")]
		public int margin_get_styles (int line, string styles);
		[CCode (cname = "gtk_scintilla_margin_get_text")]
		public int margin_get_text (int line, string text);
		[CCode (cname = "gtk_scintilla_margin_set_style")]
		public void margin_set_style (int line, int style);
		[CCode (cname = "gtk_scintilla_margin_set_style_offset")]
		public void margin_set_style_offset (int style);
		[CCode (cname = "gtk_scintilla_margin_set_styles")]
		public void margin_set_styles (int line, string styles);
		[CCode (cname = "gtk_scintilla_margin_set_text")]
		public void margin_set_text (int line, string text);
		[CCode (cname = "gtk_scintilla_margin_text_clear_all")]
		public void margin_text_clear_all ();
		[CCode (cname = "gtk_scintilla_marker_add")]
		public int marker_add (int line, int markerNumber);
		[CCode (cname = "gtk_scintilla_marker_add_set")]
		public void marker_add_set (int line, int @set);
		[CCode (cname = "gtk_scintilla_marker_define")]
		public void marker_define (int markerNumber, int markerSymbol);
		[CCode (cname = "gtk_scintilla_marker_define_pixmap")]
		public void marker_define_pixmap (int markerNumber, string pixmap);
		[CCode (cname = "gtk_scintilla_marker_delete")]
		public void marker_delete (int line, int markerNumber);
		[CCode (cname = "gtk_scintilla_marker_delete_all")]
		public void marker_delete_all (int markerNumber);
		[CCode (cname = "gtk_scintilla_marker_delete_handle")]
		public void marker_delete_handle (int handle);
		[CCode (cname = "gtk_scintilla_marker_get")]
		public int marker_get (int line);
		[CCode (cname = "gtk_scintilla_marker_line_from_handle")]
		public int marker_line_from_handle (int handle);
		[CCode (cname = "gtk_scintilla_marker_next")]
		public int marker_next (int lineStart, int markerMask);
		[CCode (cname = "gtk_scintilla_marker_previous")]
		public int marker_previous (int lineStart, int markerMask);
		[CCode (cname = "gtk_scintilla_marker_set_alpha")]
		public void marker_set_alpha (int markerNumber, int alpha);
		[CCode (cname = "gtk_scintilla_marker_set_back")]
		public void marker_set_back (int markerNumber, int back);
		[CCode (cname = "gtk_scintilla_marker_set_fore")]
		public void marker_set_fore (int markerNumber, int fore);
		[CCode (cname = "gtk_scintilla_marker_symbol_defined")]
		public int marker_symbol_defined (int markerNumber);
		[CCode (cname = "gtk_scintilla_move_caret_inside_view")]
		public void move_caret_inside_view ();
		[CCode (cname = "gtk_scintilla_null")]
		public void @null ();
		[CCode (cname = "gtk_scintilla_page_down")]
		public void page_down ();
		[CCode (cname = "gtk_scintilla_page_down_extend")]
		public void page_down_extend ();
		[CCode (cname = "gtk_scintilla_page_down_rect_extend")]
		public void page_down_rect_extend ();
		[CCode (cname = "gtk_scintilla_page_up")]
		public void page_up ();
		[CCode (cname = "gtk_scintilla_page_up_extend")]
		public void page_up_extend ();
		[CCode (cname = "gtk_scintilla_page_up_rect_extend")]
		public void page_up_rect_extend ();
		[CCode (cname = "gtk_scintilla_para_down")]
		public void para_down ();
		[CCode (cname = "gtk_scintilla_para_down_extend")]
		public void para_down_extend ();
		[CCode (cname = "gtk_scintilla_para_up")]
		public void para_up ();
		[CCode (cname = "gtk_scintilla_para_up_extend")]
		public void para_up_extend ();
		[CCode (cname = "gtk_scintilla_paste")]
		public void paste ();
		[CCode (cname = "gtk_scintilla_point_x_from_position")]
		public int point_x_from_position (int pos);
		[CCode (cname = "gtk_scintilla_point_y_from_position")]
		public int point_y_from_position (int pos);
		[CCode (cname = "gtk_scintilla_position_after")]
		public int position_after (int pos);
		[CCode (cname = "gtk_scintilla_position_before")]
		public int position_before (int pos);
		[CCode (cname = "gtk_scintilla_position_from_line")]
		public int position_from_line (int line);
		[CCode (cname = "gtk_scintilla_position_from_point")]
		public int position_from_point (int x, int y);
		[CCode (cname = "gtk_scintilla_position_from_point_close")]
		public int position_from_point_close (int x, int y);
		[CCode (cname = "gtk_scintilla_redo")]
		public void redo ();
		[CCode (cname = "gtk_scintilla_register_image")]
		public void register_image (int type, string xpmData);
		[CCode (cname = "gtk_scintilla_release_document")]
		public void release_document (int doc);
		[CCode (cname = "gtk_scintilla_replace_sel")]
		public void replace_sel (string text);
		[CCode (cname = "gtk_scintilla_replace_target")]
		public int replace_target (int length, string text);
		[CCode (cname = "gtk_scintilla_replace_target_regex")]
		public int replace_target_regex (int length, string text);
		[CCode (cname = "gtk_scintilla_rotate_selection")]
		public void rotate_selection ();
		[CCode (cname = "gtk_scintilla_scroll_caret")]
		public void scroll_caret ();
		[CCode (cname = "gtk_scintilla_search_anchor")]
		public void search_anchor ();
		[CCode (cname = "gtk_scintilla_search_in_target")]
		public int search_in_target (int length, string text);
		[CCode (cname = "gtk_scintilla_search_next")]
		public int search_next (int flags, string text);
		[CCode (cname = "gtk_scintilla_search_prev")]
		public int search_prev (int flags, string text);
		[CCode (cname = "gtk_scintilla_select_all")]
		public void select_all ();
